--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,12 @@ address {
 .link {
   text-decoration: none;
   color: inherit;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover,
+.link:focus {
+  color: var(--accent-color);
 }
 
 .visually-hidden {
@@ -381,6 +387,7 @@ address {
 
 .footer .social-link {
   background-color: var(--footer-social-bg-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer .social-link:hover,
@@ -443,12 +450,14 @@ address {
 .projects-link-list .link {
   display: flex;
   flex-direction: column;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-link-list .link:hover,
 .projects-link-list .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  color: var(--main-text-color);
 }
 
 .projects-list-title {
