--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,7 @@ address {
   color: var(--btn-text-color);
   padding: 10px 32px;
   border: none;
+  transition: background 250ms var(--cubic), box-shadow 250ms var(--cubic);
 }
 
 .hero-btn:focus,
@@ -434,6 +435,9 @@ address {
   cursor: pointer;
   border-color: transparent;
   padding: 6px 22px;
+
+  transition: color 250ms var(--cubic), background 250ms var(--cubic),
+    box-shadow 250ms var(--cubic);
 }
 
 .projects-btn:focus,
