--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,21 @@ address {
   color: var(--accent-color);
 }
 
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
 .header-item-icon {
   margin-right: 10px;
   fill: currentColor;
