--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --btn-text-color: #ffffff;
   --first-background-color: #2f303a;
   --second-background-color: #f5f4fa;
+  --wwd-text-background-color: rgba(47, 48, 58, 0.8);
   --btn-hover-color: #188ce8;
   --link-color: rgba(255, 255, 255, 0.6);
   --border-card-color: #eeeeee;
@@ -281,7 +282,29 @@ address {
 }
 
 .wwd-item {
+  position: relative;
+
   flex-basis: calc(100% / 3 - 30px);
+}
+
+.wwd-item-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 27px;
+
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--btn-text-color);
+  background-color: var(--wwd-text-background-color);
 }
 
 /* ----- Team ----- */
